<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sf.vimo.com.sf.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:src="@drawable/ic_launcher_background"
            android:layout_centerHorizontal="true"
            android:paddingTop="100dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:id="@+id/userTag"
            android:text = "@string/Name"
            android:padding="5dp"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/userName"
            android:layout_toEndOf="@+id/passTag"
            android:layout_below="@+id/logo"
            android:focusedByDefault="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userTag"
            android:id="@+id/passTag"
            android:text="@string/url"
            android:padding="5dp"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/passWord"
            android:layout_toEndOf="@+id/passTag"
            android:layout_below="@+id/userName"
            android:focusedByDefault="false" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_margin="30dp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
